--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/pages/
 ########\u6784\u5EFAURL\u65F6\u9644\u52A0\u5230\u67E5\u770B\u540D\u79F0\u7684\u540E\u7F00\u3002
 spring.thymeleaf.suffix=.html
+
+########\u914D\u7F6E\u6587\u4EF6\u8BBE\u7F6E\u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84
+spring.messages.basename=i18n.login
