--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+########\u8BBE\u7F6E\u9879\u76EE\u8BBF\u95EE\u7684\u8DDF\u8DEF\u5F84
+#server.servlet.context-path=/system
+####### window.location.href = 'login';\u4E0D\u5E26\u659C\u6746\u8868\u793A\u8BF7\u6C42\u7684\u8BE5\u76EE\u5F55\u4E0B\u7684\u5373\uFF1A/system/login\u3001\u5E26\u659C\u6746\u7684\u8BDD\u5373\uFF1A/login
 ########\u8BBE\u7F6E\u65E5\u5FD7\u7684\u7EA7\u522B
 logging.level.cn.fantuan=trace
 ########\u8BBE\u7F6E\u63A7\u5236\u53F0\u6253\u5370\u7684\u65E5\u5FD7\u683C\u5F0F
@@ -11,4 +14,4 @@ spring.thymeleaf.prefix=classpath:/pages/
 ########\u6784\u5EFAURL\u65F6\u9644\u52A0\u5230\u67E5\u770B\u540D\u79F0\u7684\u540E\u7F00\u3002
 spring.thymeleaf.suffix=.html
 ########\u914D\u7F6E\u6587\u4EF6\u8BBE\u7F6E\u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84
-spring.messages.basename=i18n.login,i18n.forget
+spring.messages.basename=i18n.login,i18n.forget,i18n.error
