--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 ########\u8BBE\u7F6E\u9879\u76EE\u8BBF\u95EE\u7684\u8DDF\u8DEF\u5F84
 #server.servlet.context-path=/system
-####### window.location.href = 'login';\u4E0D\u5E26\u659C\u6746\u8868\u793A\u8BF7\u6C42\u7684\u8BE5\u76EE\u5F55\u4E0B\u7684\u5373\uFF1A/system/login\u3001\u5E26\u659C\u6746\u7684\u8BDD\u5373\uFF1A/login
+######## window.location.href = 'login';\u4E0D\u5E26\u659C\u6746\u8868\u793A\u8BF7\u6C42\u7684\u8BE5\u76EE\u5F55\u4E0B\u7684\u5373\uFF1A/system/login\u3001\u5E26\u659C\u6746\u7684\u8BDD\u5373\uFF1A/login
+########\u8BBE\u7F6E\u7AEF\u53E3\u53F7
+server.port=8081
 ########\u8BBE\u7F6E\u65E5\u5FD7\u7684\u7EA7\u522B
 logging.level.cn.fantuan=trace
 ########\u8BBE\u7F6E\u63A7\u5236\u53F0\u6253\u5370\u7684\u65E5\u5FD7\u683C\u5F0F
@@ -15,3 +17,12 @@ spring.thymeleaf.prefix=classpath:/pages/
 spring.thymeleaf.suffix=.html
 ########\u914D\u7F6E\u6587\u4EF6\u8BBE\u7F6E\u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84
 spring.messages.basename=i18n.login,i18n.forget,i18n.error
+#######\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/system?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+spring.datasource.username=root
+spring.datasource.password=fanzc131
+#######mybatis\u914D\u7F6E
+mybatis.mapper-locations=classpath:cn/fantuan/system/dao/mapper/*.xml
+mybatis.type-aliases-package=cn.fantuan.system.entities
