--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 ######## window.location.href = 'login';\u4E0D\u5E26\u659C\u6746\u8868\u793A\u8BF7\u6C42\u7684\u8BE5\u76EE\u5F55\u4E0B\u7684\u5373\uFF1A/system/login\u3001\u5E26\u659C\u6746\u7684\u8BDD\u5373\uFF1A/login
 ########\u8BBE\u7F6E\u7AEF\u53E3\u53F7
 server.port=8081
+server.servlet.session.timeout=2h
 ########\u8BBE\u7F6E\u65E5\u5FD7\u7684\u7EA7\u522B
 logging.level.cn.fantuan=trace
 ########\u8BBE\u7F6E\u63A7\u5236\u53F0\u6253\u5370\u7684\u65E5\u5FD7\u683C\u5F0F
@@ -22,7 +23,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/system?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
 spring.datasource.username=root
-spring.datasource.password=fanzc131
+spring.datasource.password=123456789
 #######mybatis\u914D\u7F6E
 mybatis.mapper-locations=classpath:cn/fantuan/system/dao/mapper/*.xml
 mybatis.type-aliases-package=cn.fantuan.system.entities
