--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,10 @@ spring.messages.basename=i18n.login,i18n.forget,i18n.error
 #######\u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/system?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+#spring.datasource.url=jdbc:mysql://localhost:3306/system?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+spring.datasource.url=jdbc:mysql://localhost:3306/system?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=fanzc131
 #######mybatis\u914D\u7F6E
 mybatis.mapper-locations=classpath:cn/fantuan/system/dao/mapper/*.xml
 mybatis.type-aliases-package=cn.fantuan.system.entities
