角色权限管理初步形成

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,18 @@
             <artifactId>shiro-spring-boot-starter</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <!--shiro中的三方缓存jar包依赖-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <!--替换自身低版本的jar包-->
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>3.8.0</version>
+        </dependency>
         <!-- 链接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
